# copula_model

./: .gitignore  README.md  proposal.md  pyproject.toml
.github/: copilot-instructions.md
copula_model/: __init__.py  distribution_fitting.py  mc_simulation.py
data/: data.py
docs/: Distribution_Fitting$PIT.ipynb  proposal.md  report.md
scripts/: Distribution_Fitting$PIT.ipynb  main.ipynb
tests/: test_mc_simulation.py
